# cliqon

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  patch_sftp.sh  test_zip.rs  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  check.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: cron.rs  docker.rs  logging.rs  mod.rs  monitor.rs  net_tools.rs  profile.rs  sftp.rs  sharing.rs  snippet.rs  ssh_keys.rs  system.rs  terminal.rs  tunnel.rs
src-tauri/src/models/: mod.rs  profile.rs  sftp.rs  sharing.rs  snippet.rs
src-tauri/src/services/: auth.rs  connection_pool.rs  docker.rs  import.rs  logging.rs  mod.rs  monitor.rs  net_tools.rs  sftp.rs  sharing.rs  snippet.rs  ssh.rs  store.rs  system.rs  tunnel.rs
src-tauri/src/state/: app_state.rs
src/components/dashboard/: DashboardWidgets.tsx
src/components/layout/: Logo.tsx  Sidebar.tsx  TitleBar.tsx  TopBar.tsx
src/components/settings/: KeyStore.tsx
src/contexts/: ConnectionsContext.tsx  SharingContext.tsx  SnippetsContext.tsx  ThemeContext.tsx
src/data/: terminalCommands.ts
src/hooks/: useConfirm.tsx  useConnections.ts  useResizable.ts  useSessionTimeout.ts  useSftpBookmarks.ts  useSnippets.ts  useTerminalHistory.ts  useTheme.ts  useUpdater.ts
src/lib/: db.ts  migration.ts  storage.ts  themes.ts
src/ml/: CommandPredictor.ts
src/services/: api.ts
src/types/: connection.ts  sharing.ts
(+41 files in other folders)
