[package]
name = "cliqon"
version = "0.3.5"
description = "Cliqon - Cross-platform SSH and DevOps Client"
authors = ["Murat Genc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cliqon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9.5"
keyring = "3.6.3"
uuid = { version = "1.21.0", features = ["v4"] }
thiserror = "2.0.18"
crossbeam-channel = "0.5.15"
rust-ini = "0.21.3"
tiny_http = "0.12"
local-ip-address = "0.6"
hostname = "0.4"
zip = "2"

